--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ android {
 
 dependencies {
 
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
