--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation("androidx.room:room-ktx:2.5.1")
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation 'androidx.core:core-ktx:1.7.0'
