--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
     implementation "androidx.room:room-runtime:2.5.1"
+
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
 }
